one-tier/k8s-cluster/001_bakery_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: bakery
  name: bakery-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: bakery
  template:
    metadata:
      labels:
        name: bakery
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: beta.kubernetes.io/os
                    operator: In
                    values:
                      - windows
      containers:
        - image: stevenfollis/bakery:web
          name: web
          ports:
            - containerPort: 80
              name: http-server
