one-tier/k8s-cluster/002_bakery-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bakery
  labels:
    name: bakery
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    name: bakery
