one-tier/k8s-cluster/003_bakery-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bakery
spec:
  rules:
    - host: bakery.kube.maws.mr.dtcntr.net
      http:
        paths:
          - backend:
              serviceName: bakery
              servicePort: 80
