one-tier/k8s-cluster/003_bakery_istio_gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bakery
spec:
  hosts:
    - bakery.{ur.fqdn}
  gateways:
    - istio-system/demo-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: bakery
            port:
              number: 80
